Fix Train intro image too big on 9/16 phone devices

--- a/client/src/styles/pages/_Train.scss
+++ b/client/src/styles/pages/_Train.scss
@@ -9,10 +9,10 @@
     padding: 1rem 0;
 
     img {
-      width: 100%;
+      width: 90%;
       float: right;
 
-      @media screen and (min-width: $screen-desktop) and (max-height: 860px) {
+      @media screen and (max-width: $screen-desktop) and (max-height: 860px) {
         width: 70%;
       }
     }
